<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <TextView
        android:text="@string/TextRank"
        android:gravity="center_horizontal"                        
        android:padding="3dip"                        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
    />
     
    <TextView
        android:text="@string/TextName"
        android:gravity="center_horizontal"                        
        android:padding="3dip"                        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
    />
    
    <TextView
        android:text="@string/TextScore"
        android:gravity="center_horizontal"                        
        android:padding="3dip"                        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
    />
    
    <TextView
        android:text="@string/TextDate"
        android:gravity="center_horizontal"                        
        android:padding="3dip"                        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
    />
        
</LinearLayout>
